Update build stage in GitLab pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,6 @@
 default:
   image: registry.redhat.io/openshift4/ose-cli:latest
 
-s2i:
+build:
   script:
-    - oc login https://api.ocp.taco.moe:6443 --token="${OPENSHIFT_API_TOKEN}" --insecure-skip-tls-verify
-    - oc start-build rest-http-example --follow --wait
-    - oc get builds
+    - oc start-build hello-world --follow --wait
