Add debug build commands to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,6 @@ default:
 
 build:
   script:
-    - oc start-build hello-world -n hello-world --follow --wait
+    - oc get builds
+    - oc logs build hello-world-3
+    - oc start-build hello-world -n hello-world
