--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,4 @@ default:
 
 build:
   script:
-    - oc get builds -n hello-world
-    - oc logs hello-world-3-build -n hello-world
-    - oc start-build hello-world -n hello-world
+    - oc start-build hello-world -n hello-world --wait --follow
