Add logs --follow line to debug

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,4 +3,5 @@ default:
 
 build:
   script:
+    - oc logs hello-world-build-3 -n hello-world --follow
     - oc start-build hello-world -n hello-world --wait --follow
