--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,4 +5,6 @@ build:
   script:
     # - sleep 5000
     # - oc logs hello-world-build-3 -n hello-world --follow
+    - env
+    - exit 1
     - oc start-build hello-world -n hello-world --wait --follow
