--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ default:
 
 build:
   script:
-    - echo "$CI_COMMIT_BRANCH"
-    - oc start-build "hello-world-$CI_COMMIT_BRANCH" \
+    - |
+      oc start-build "hello-world-$CI_COMMIT_BRANCH" \
         --namespace hello-world-dev \
         --follow \
         --wait
