--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,43 @@
 default:
   image: registry.redhat.io/openshift4/ose-cli:latest
 
+variables:
+  # IMAGE_NAME should not have a tag at the end! That will be detemined based on branch
+  IMAGE_NAME: quay-registry-quay-quay-enterprise.apps.hub.taco.moe/hello-world/hello-world
+
 build-image:
   script:
+    - |
+      cat << EOF
+        apiVersion: build.openshift.io/v1
+        kind: BuildConfig
+        metadata:
+          name: $CI_COMMIT_BRANCH
+          namespace: gitlab-runner
+        spec:
+          failedBuildsHistoryLimit: 5
+          output:
+            pushSecret:
+              name: push-secret # This needs to be created
+            to:
+              kind: DockerImage
+              name: $IMAGE_NAME
+          runPolicy: Serial
+          source:
+            git:
+              ref: $CI_COMMIT_BRANCH
+              uri: ${CI_PROJECT_URL}.git
+            type: Git
+          strategy:
+            sourceStrategy:
+              from:
+                kind: ImageStreamTag
+                name: java:openjdk-17-ubi8
+                namespace: openshift
+            type: Source
+          successfulBuildsHistoryLimit: 5
+      EOF
+    - exit 0
     - |
       oc start-build "$CI_COMMIT_BRANCH" \
         --namespace hello-world-dev \
