Fix image stream check name

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
 build-image:
   script:
     - |
-      oc get buildconfig $CI_COMMIT_BRANCH &> /dev/null || oc create -f - << EOF
+      oc get buildconfig "${APP_NAME}-${CI_COMMIT_BRANCH}" &> /dev/null || oc create -f - << EOF
         apiVersion: build.openshift.io/v1
         kind: BuildConfig
         metadata:
