--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ build-image:
 
 scan-image:
   script:
+    - roxctl -e "$ROX_CENTRAL_ADDRESS" image check --image "${IMAGE_NAME}:${IMAGE_TAG}" --insecure-skip-tls-verify --output json
     - roxctl -e "$ROX_CENTRAL_ADDRESS" image scan --image "${IMAGE_NAME}:${IMAGE_TAG}" --insecure-skip-tls-verify --output json > scan.json
     - jq -r '.result.summary' scan.json
   stage: scan-image
