Revert "Validate that pipeline won't run without a tag"
This reverts commit 8426dd89d606c82fa87dc6e4af4f8cd0598211cc.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 default:
   # TODO: Move this to the GitLab Runner config
   image: quay-registry-quay-quay-enterprise.apps.hub.taco.moe/hello-world/ci-tools:latest
-  # tags:
-  #   - $RUNNER_TAG
+  tags:
+    - $RUNNER_TAG
 
 stages:
   - build-image
