--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,8 @@ workflow:
 
 build-image:
   script:
-    - oc apply -f - << EOF
+    -|
+      oc apply -f - << EOF
         apiVersion: build.openshift.io/v1
         kind: BuildConfig
         metadata:
